--- a/admin-login.html
+++ b/admin-login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Login</title>
+    <title>Admin Login Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
