--- a/customer-login.html
+++ b/customer-login.html
@@ -7,17 +7,23 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="welcome-banner">
+      <h1>WELCOME TO RETAILSYNC</h1>
+    </div>
     <div class="login-container">
       <h2>Customer Login</h2>
       <form action="customer-dashboard.html" method="POST" id="login-form">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required /><br />
+        <input type="text" id="username" name="username" required />
 
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required /><br />
+        <input type="password" id="password" name="password" required />
 
         <button type="submit">Login</button>
       </form>
+      <p class="register-link">
+        Don't have an account? <a href="register.html">Register here</a>
+      </p>
     </div>
   </body>
 </html>
