--- a/inventory.html
+++ b/inventory.html
@@ -1,69 +1,99 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Administrator Inventory View</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <h1>Inventory Management</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Products Inventory</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <h1>Products Inventory</h1>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Product ID</th>
-        <th>Product Name</th>
-        <th>Stock Quantity</th>
-        <th>Reorder Level</th>
-        <th>Warehouse Location</th>
-        <th>Last Updated</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody id="inventory-items">
-      <!-- Inventory items will be dynamically added here -->
-    </tbody>
-  </table>
+    <table>
+      <thead>
+        <tr>
+          <th>Product ID</th>
+          <th>Product Name</th>
+          <th>Price</th>
+          <th>Stock Quantity</th>
+          <th>Last Updated</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody id="products-items">
+        <!-- Product items will be dynamically added here -->
+      </tbody>
+    </table>
+    <script>
+      // Function to fetch and display products
+      function loadProducts() {
+        fetch("http://localhost:3000/api/products")
+          .then((response) => response.json())
+          .then((products) => {
+            const productsItemsContainer =
+              document.getElementById("products-items");
+            productsItemsContainer.innerHTML = ""; // Clear any existing rows
 
-  <script>
-    // Sample data for inventory
-    const inventoryData = [
-      {
-        productId: "P001",
-        productName: "Stylish Hat",
-        stockQuantity: 25,
-        reorderLevel: 10,
-        warehouseLocation: "A1",
-        lastUpdated: "2024-10-15",
-      },
-      {
-        productId: "P002",
-        productName: "Classic T-Shirt",
-        stockQuantity: 50,
-        reorderLevel: 20,
-        warehouseLoca
+            products.forEach((product) => {
+              const row = document.createElement("tr");
+              row.innerHTML = `
+            <td>${product.product_id}</td>
+            <td>${product.product_name}</td>
+            <td>$<input type="number" value="${
+              product.price
+            }" onchange="updateProduct(${
+                product.product_id
+              }, 'price', this.value)" /></td>
+            <td><input type="number" value="${
+              product.stock_quantity
+            }" onchange="updateProduct(${
+                product.product_id
+              }, 'stock_quantity', this.value)" /></td>
+            <td>${new Date(product.last_updated).toLocaleDateString()}</td>
+            <td><button onclick="deleteProduct(${
+              product.product_id
+            })">Delete</button></td>
+          `;
+              productsItemsContainer.appendChild(row);
+            });
+          })
+          .catch((error) => console.error("Error loading products:", error));
       }
-    ]
 
-<html>
-<head>
-    <title>Inventory Management</title>
-</head>
-<body>
-    <h1>Manage Inventory</h1>
-    <form id="inventoryForm">
-        <label for="productName">Product Name:</label>
-        <input type="text" id="productName">
-        <label for="price">Price:</label>
-        <input type="number" id="price">
-        <label for="quantity">Quantity:</label>
-        <input type="number" id="quantity">
-        <button type="submit">Add/Update Product</button>
-    </form>
-    <div id="inventoryTable">
-        <!-- Placeholder table of inventory items -->
-    </div>
-</body>
+      // Update a product's field in the database
+      function updateProduct(productId, field, value) {
+        fetch(`http://localhost:3000/api/products/${productId}`, {
+          method: "PATCH",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ field, value }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Update successful:", data);
+            alert("Product updated successfully!");
+            loadProducts(); // Reload products
+          })
+          .catch((error) => console.error("Error updating product:", error));
+      }
+
+      // Delete a product
+      function deleteProduct(productId) {
+        fetch(`http://localhost:3000/api/products/${productId}`, {
+          method: "DELETE",
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("Delete successful:", data);
+            alert("Product deleted successfully!");
+            loadProducts(); // Reload products
+          })
+          .catch((error) => console.error("Error deleting product:", error));
+      }
+
+      // Load products on page load
+      window.onload = loadProducts;
+    </script>
+  </body>
 </html>
