--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -66,10 +65,9 @@
         loadCart(); // Refresh the cart view
       }
 
-      // Checkout placeholder function
+      // Update the checkout function
       function checkout() {
-        alert("Proceeding to checkout...");
-        // Implement checkout functionality here
+        window.location.href = 'checkout.html';
       }
 
       // Load cart when page is ready
