--- a/form1a.html
+++ b/form1a.html
@@ -4,7 +4,6 @@
 <head>
     <title>Check Card Number</title>
 </head>
-
 <body>
     <div class="main">
         <h1>Assignment 5</h1>
@@ -14,7 +13,7 @@
 
             <div>
                 <label for="CustomerID">CustomerID:</label>
-                <input type="number" id="CustomerID" name="CustomerID" placeholder="Enter your CustomerID" required>
+                <input type="text" id="CustomerID" name="CustomerID" placeholder="Enter your CustomerID" required>
             </div>
 
             <div class="wrap">
