--- a/form1b.html
+++ b/form1b.html
@@ -14,11 +14,11 @@
 
             <div>
                 <label for="CustomerID">CustomerID:</label>
-                <input type="number" id="CustomerID" name="CustomerID" placeholder="Enter your CustomerID" required>
+                <input type="text" id="CustomerID" name="CustomerID" placeholder="Enter your CustomerID" required>
             </div>
              <div>
                 <label for="PaymentID">PaymentID:</label>
-                <input type="number" id="PaymentID" name="PaymentID" placeholder="Enter your PaymentID" required>
+                <input type="text" id="PaymentID" name="PaymentID" placeholder="Enter your PaymentID" required>
             </div>
 
             <div class="wrap">
